...
                    .onEnded( { _ in
                        isPressed = false
                        self.tag = 1
                    })
            
            )
            .accessibilityIdentifier("runStartButton")
    }
}

extension StartBtn {
    private enum Size {
        static let startBtnWidthRatio = 0.2820
...
