//
//  SubViews.swift
//  GatheRunner
//
//  Created by 김동현 on 2022/10/17.
//

public enum SubViews {
    public enum RunningRecord {
        static public let timerView = "timerView"
        static public let kilometerView = "kilometerView"
        static public let paceView = "paceView"
        static public let resumeButton = "resumeButton"
    }
}
